# pipeflow-mcp-server

./: LICENSE  cookies.txt  main.py  mydata.json  package-lock.json  pyproject.toml  testbed.ipynb
backend/: sessions.db  test_auth_flow.py
backend/app/: app_info.json  constants.py  get_apps_fixed.py  get_apps_updated.py  main.py  main_archive.py  main_fixed.py  main_v2.py  sessions.db  store.py  store_archived_v1.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py  auth.py  connect.py
backend/app/core/: config.py  mcp_client.py  security.py  utils.py
backend/app/models/: schema.py  schema_archived.py
backend/app/routers/: __init__.py  apps.py  auth.py  oauth.py  sessions.py  tools.py  users.py
backend/app/schemas/: __init__.py  token.py  user.py
backend/app/services/: pipedream_auth.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/app/: api-client.ts  layout.tsx  page.tsx
frontend/src/app/api/connect_app/: route.ts
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/apps/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AppCard.tsx  ConnectButton.jsx
frontend/src/components/layout/: Header.tsx  MobileSidebar.tsx  Sidebar.tsx
frontend/src/components/ui/: LoadingSpinner.tsx
frontend/src/hooks/: useAppAuth.ts
frontend/src/pages/: OAuthCallback.jsx
frontend/src/providers/: auth-provider.tsx  query-provider.tsx
frontend/src/stores/: auth-store.ts
frontend/src/utils/: appUtils.ts
(+1 files in other folders)
